kube_cluster_configs/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emp-mgmt-backend-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: emp-mgmt-backend-app
  template:
    metadata:
      labels:
        app: emp-mgmt-backend-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: emp-mgmt-backend-app
            topologyKey: kubernetes.io/hostname
      containers:
      - name: emp-mgmt-backend-container
        image: amritjsr/emp_mgmt_backend:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: backend-logs-vol
          mountPath: /app/logs
      - name: promtail-sidecar
        image: grafana/promtail:latest
        args: ["-config.file=/etc/promtail/promtail.yaml"]
        volumeMounts:
        - name: backend-logs-vol
          mountPath: /app/logs
        - name: promtail-config-vol
          mountPath: /etc/promtail
      volumes:
      - name: backend-logs-vol
        persistentVolumeClaim:
          claimName: backend-logs-pvc
      - name: promtail-config-vol
        configMap:
          name: promtail-sidecar-config
