kube_cluster_configs/frontend-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emp-mgmt-frontend-app
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: emp-mgmt-frontend-app
  template:
    metadata:
      labels:
        app: emp-mgmt-frontend-app
    spec:
      containers:
      - name: emp-mgmt-frontend-container
        image: amritjsr/emp_mgmt_frontend:latest 
        ports:
        - containerPort: 80
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: emp-mgmt-frontend-app
        # resources:
        #   requests:
        #     memory: "128Mi"
        #     cpu: "250m"
        #   limits:
        #     memory: "256Mi"
        #     cpu: "500m"
