kube_cluster_configs/backend-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: emp-mgmt-backend-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: emp-mgmt-backend-app
