kube_cluster_configs/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emp-mgmt-frontend-service
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 30080
  selector:
    app: emp-mgmt-frontend-app
