kube_cluster_configs/loki-infra.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: default
  labels:
    app: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
      - name: loki
        image: grafana/loki:latest
        ports:
        - name: metrics
          containerPort: 3100
          protocol: TCP
        # Minimal configuration for demo purposes
        args:
        - -config.file=/etc/loki/local-config.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: default
  labels:
    app: loki
spec:
  type: ClusterIP
  ports:
  - port: 3100
    protocol: TCP
    name: http-metrics
    targetPort: 3100
  selector:
    app: loki

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: default
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: default
  labels:
    app: grafana
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
    nodePort: 32000
  selector:
    app: grafana
