kube_cluster_configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emp-mgmt-frontend-ingress
  namespace: default
spec:
  rules:
  - host: emp-mgmt-frontend.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: emp-mgmt-frontend-service
            port:
              number: 80

# ---

# apiVersion: v1
# kind: Service
# metadata:
#   name: emp-mgmt-frontend-service
#   namespace: default
# spec:
#   type: LoadBalancer
#   ports:
#   - port: 80
#     targetPort: 80
#     protocol: TCP
#   selector:
#     app: emp-mgmt-frontend-app
